<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/spacing_24"
        android:layout_marginEnd="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_32"
        android:text="@string/several_cafe_basket_warning_title" />

    <TextView
        android:text="@string/several_cafe_basket_warning_message"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_40"
        android:layout_marginTop="@dimen/spacing_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearBasketButton"
        style="@style/Button.Blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_40"
        android:layout_marginEnd="@dimen/spacing_16"
        android:text="@string/several_cafe_basket_warning_clear_approve" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelButton"
        style="@style/Button.BlueBorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_16"
        android:layout_marginEnd="@dimen/spacing_16"
        android:layout_marginBottom="@dimen/spacing_16"
        android:text="@string/several_cafe_basket_warning_cancel_clear" />

</LinearLayout>