<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/minusButton"
            style="@style/Button.Counter"
            android:layout_width="40dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/productCount"
            style="@style/Text.Title"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_width="@dimen/spacing_24"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_4"
            android:text="@string/one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/plusButton"
            style="@style/Button.Counter"
            android:layout_width="40dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/plus" />

    </LinearLayout>

</merge>